Fixed java 11 compatibility